			   XPCE ChangeLog
			   ==============

* FIXED: Help-balloons on loc-still

* FIXED: make rpm-install: install the manual search index.

* FIXED: Search form of the XPCE HTTP manual (from xpce/prolog/lib/http)


VERSION 6.0.2, distributed with SWI-Prolog 5.0.2
================================================

* FIXED: Error handling red-slider in HSV colour demo (Geof Bishop).

* FIXED: Draw the label of tab objects that are not `on top'.

* PORT: MacOS X.  Changed:
	- Fixed xpm header detection if not in default path
	- Added __unix__ to config.h
	- Fixed configure to deal with shells where eval "" fails
	- Use plld -shared to link the pl2xpce.so shared object
	- Allow for different-named executable Prolog (swipl)
	- Use hacky function + call in ker/glob.c to work around
	  a bug in the linker.
	- See the SWI-Prolog twiki web for more info.

* ADDED: Allow for `editor->style: Name, @nil' to delete the given style from
  the editor.

* ADDED: Many PceEmacs goodies for Prolog mode
	- Colour arguments to all (declared) meta-calls
	- Better handling of explicit cross-module calls and definitions
	- Precompile prolog_mode.pl and related files to qlf to speed up
	  loading on slow machines.
	- Marking variables.
	- Integrate singleton marks with global colouring.
	- Deal with (direct) recursion while cross-referencing and
	  underline recursive calls.

* MODIFIED: Make pce_image_directory/1 not open the display when compiling
  a state.  This should be fine as long as the compilation process doesn't
  create images.  If it does, open the display explicitly before creating
  the rest of the state using send(@display, open).

* FIXED: Editor: bind C-j to newline_and_indent as well as LFD, as these
  sequences send different commands since a while.  Used to work nevertheless
  in PceEmacs because `fundamental_mode->typed' was defined to accept
  event_id rather then event.

* FIXED: Improve keyboard input handling in X11 version when using transient